scss/inc/__cover-section.scss
.cover-container {
    padding: 260px 0 100px;
    background: url('../../public/img/bg-cover.png') no-repeat;
    background-size: 100%;
    
    .cover-wrapper {
        max-width: 963px;
        margin: 0 auto;
        display: flex;
        flex-direction: column;
        align-items: center;

        .cover-img-wrapper {
            width: 100%;
            
            img {
                width: 100%;
                height: auto;
                object-fit: cover;
            }
        }

        .cover-title {
            padding: 0 30px;
            margin: 50px 0 20px;

            h1 {
                font-size: 30px;
                font-family: $circular;
                font-weight: bold;
                text-align: center;
                color: inherit;
                line-height: 40px;
                margin: 0;
            }
        }

        .btn-contact {

            a {
                text-decoration: none;
                font-size: 18px;
                font-family: $circular;
                border-bottom-width: 50px;
                color: inherit;
                position: relative;

                &::after {
                    content: "";
                    position: absolute;
                    left: 0;
                    bottom: -4px;
                    width: 105%;
                    height: 3px;
                    background: #F21689;
                }
            }

            &::after {
                content: url("../../public/img/arrow-black.png");
                margin-left: 20px;
                position: relative;
                top: 3px;
            }
        }
    }
}

